8234616: assert(0 <= i && i < _len) failed: illegal index in PhaseMacroExpand::expand_macro_nodes()

Make sure the index into the macro node array is decremented on removal.

Reviewed-by: vlivanov, kvn